Fix animation causing horizontal overflow

--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,7 @@
 .section {
   padding: 200px 0;
   position: relative;
+  overflow-x: hidden;
 }
 
 .section1 {
